set Navigation Part

--- a/assets/style/basics.css
+++ b/assets/style/basics.css
@@ -70,3 +70,11 @@
     margin-top: 20px;
     margin-left: 300px;
 }
+
+.dropdown-menu{
+    background-color: blue;
+}
+
+.dropdown-item:hover{
+    color: black;
+}
