--- a/assets/style/basics.css
+++ b/assets/style/basics.css
@@ -103,6 +103,13 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-top:50px;
+}
+#btnItemCrud{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top:50px;
 }
 
 #btnSearch{
@@ -117,5 +124,11 @@
     color: white;
 }
 .saveModel{
+    color: white;
+}
+#customerForm{
+    color: white;
+}
+#itemForm{
     color: white;
 }
